agregando info a contacto

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         <div class="container-form">
             <div class="info-form">
                 <h3>CONTACTO</h3>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, itaque. Consequuntur sit modi ad libero unde dolore inventore molestiae itaque placeat tempore! Nihil debitis dolor nesciunt incidunt, enim et provident.</P>
+                <a href="http://www.instagram.com/quintafachadaarquitectura/" target="_blank" rel="noopener noreferrer">Instagram</a>
+                <P>Su consulta no molesta, ¡Consulta por presupuesto Ya!</P>
             </div>
             <form action="#home" autocomplete="off" class="formu">
 
